--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,14 +11,16 @@ jobs:
       run: |
         echo "${{ secrets.GHCR_TOKEN }}" | docker login --username "${{ secrets.USERNAME }}" --password-stdin ghcr.io
     - name: Get_tags_from_the_repository
+      id: get_tags
       run: |
         image_tags=$(curl -s -H "Authorization:Bearer ${{ secrets.GHCR_TOKEN }}" https://ghcr.io/api/v1/repos/junnuvenu/nginx_proj/tags | jq '.[] | .name' -r)
         echo "All available tags: ${image_tags}"
         latest_tag=$(echo "${image_tags}" | tr ' ' '\n' | sort -n -t. -k1,1 -k2,2 -k3,3 | tail -1)
         echo "latest_tag is: ${latest_tag}"
-        echo "::set-env name=latest_tag::${latest_tag}"
+    - name: Create environment file
+      run: echo "latest_tag=${{ steps.get_tags.outputs.latest_tag }}" >> $GITHUB_ENV
     - name: Pull image from ghcr.io
-      if: env.latest_tag != ''
+      if: steps.get_tags.outputs.latest_tag != ''
       run: |
         echo "latest tag is : ${{ env.latest_tag}}"
         docker pull ghcr.io/junnuvenu/nginx_proj:${{ env.latest_tag }}
