--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,16 +17,17 @@ jobs:
         latest_tag=$(echo "${image_tags}" | tr ' ' '\n' | sort -n -t. -k1,1 -k2,2 -k3,3 | tail -1)
         echo "latest_tag is: ${latest_tag}"
     - name: Create environment file
-      run: echo "latest_tag=${latest_tag}" >> $GITHUB_ENV
+      run: echo "latest_tag=${latest_tag}" > ${{ env.GITHUB_WORKSPACE}}/env.txt
     - name: Pull image from ghcr.io
       run: |
         echo "latest tag is : ${{ env.latest_tag}}"
-        docker pull ghcr.io/junnuvenu/nginx_proj:${{ env.latest_tag }}
+        cat ${{ env.GITHUB_WORKSPACE}}/env.txt
+        source ${{ env.GITHUB_WORKSPACE}}/env.txt
+        echo "latest tag is : ${latest_tag}"
+        docker pull ghcr.io/junnuvenu/nginx_proj:${latest_tag}
     - name: Login to ACR
       run: |
           echo "${{ secrets.ACR_PASSWORD }}" | docker login --username "${{ secrets.ACR_USERNAME }}" --password-stdin "${{ secrets.ACR_LOGIN_SERVER }}"
     - name: Deploy image to ACR
       run: |
-        echo "Deploying ${{ env.latest_tag }} to ACR"
-        docker tag ghcr.io/junnuvenu/nginx_proj:${{ env.latest_tag }} "${{ secrets.ACR_LOGIN_SERVER }}/nginx_proj:${{ env.latest_tag }}"
-        docker push "${{ secrets.ACR_LOGIN_SERVER }}/nginx_proj:${{ env.latest_tag }}"
+        echo "Deploying ${latest_tag}
