--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,6 +9,8 @@ jobs:
       uses: actions/checkout@v2
     - name: setup-dotnet
       uses: actions/setup-dotnet@v2
+    - name: Create workspace directory
+      run: mkdir -p /github/workspace
     - name: Login to ghcr.io
       run: |
         echo "${{ secrets.GHCR_TOKEN }}" | docker login --username "${{ secrets.USERNAME }}" --password-stdin ghcr.io
