--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,29 +7,16 @@ jobs:
     steps:
     - name: Checkout the code
       uses: actions/checkout@v2
-    - name: setup-dotnet
-      uses: actions/setup-dotnet@v2
-    - name: Create workspace directory
-      run: mkdir -p /github/workspace
     - name: Login to ghcr.io
       run: |
         echo "${{ secrets.GHCR_TOKEN }}" | docker login --username "${{ secrets.USERNAME }}" --password-stdin ghcr.io
-    - name: Get_tags_from_the_repository
-      run: |
-        image_tags=$(curl -s -H "Authorization:Bearer ${{ secrets.GHCR_TOKEN }}" https://ghcr.io/api/v1/repos/junnuvenu/nginx_proj/tags | jq '.[] | .name' -r)
-        echo "All available tags: ${image_tags}"
-        latest_tag=$(echo "${image_tags}" | tr ' ' '\n' | sort -n -t. -k1,1 -k2,2 -k3,3 | tail -1)
-        echo "latest_tag is: ${latest_tag}"
-    - name: Create environment file
-      run: echo "latest_tag=${latest_tag}" > /github/workspace/env.txt
     - name: Pull image from ghcr.io
       run: |
-        source /github/workspace/env.txt
-        echo "latest tag is : ${latest_tag}"
-        docker pull ghcr.io/junnuvenu/nginx_proj:${latest_tag}
+        docker pull ghcr.io/junnuvenu/nginx_proj:2.0.160
     - name: Login to ACR
       run: |
           echo "${{ secrets.ACR_PASSWORD }}" | docker login --username "${{ secrets.ACR_USERNAME }}" --password-stdin "${{ secrets.ACR_LOGIN_SERVER }}"
     - name: Deploy image to ACR
       run: |
-        echo "Deploying ${latest_tag}
+        docker tag ghcr.io/junnuvenu/nginx_proj:2.0.160 "${{ secrets.ACR_LOGIN_SERVER }}/nginx_proj:2.0.160"
+        docker push "${{ secrets.ACR_LOGIN_SERVER }}/nginx_proj:2.0.160"
