--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,10 +13,11 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Login to Azure
-      uses: azure/login@v1
-      with:
-        creds: ${{ secrets.AZURE_CREDENTIALS }}
-
+      uses: azure/cli@v1
+        with:
+          azcliversion: 2.15.1
+          inlineScript: |
+            az login --service-principal -u ${{ secrets.CLIENT_ID }} -p ${{ secrets.AZURE_CLIENT_SECRET }} --tenant ${{ secrets.TENANT_ID }} -s ${{ secrets.SUBSCRIPTION_ID }}
     - name: Pull image from GHCR
       run: |
         docker pull ghcr.io/junnuvenu/nginx_proj:2.0.174
