--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,10 +17,7 @@ jobs:
       with:
           azcliversion: 2.15.1
           inlineScript: |
-            az login --service-principal -u ${{ secrets.AZURE_CLIENT_ID }} -p ${{ secrets.AZURE_CLIENT_SECRET }} --tenant ${{ secrets.TENANT_ID }}
-    - name: Set subscription
-      run: |
-        az account set --subscription ${{ secrets.SUBSCRIPTION_ID }}
+            az login --service-principal -u ${{ secrets.AZURE_CLIENT_ID }} -p ${{ secrets.AZURE_CLIENT_SECRET }} --tenant ${{ secrets.TENANT_ID }} --subscription ${{ secrets.SUBSCRIPTION_ID }}
     - name: Pull image from GHCR
       run: |
         docker pull ghcr.io/junnuvenu/nginx_proj:2.0.174
