--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
       with:
         context: .
         push: true
-        tags: ${{ env.REGISTRY_NAME }}/my-image:${{ env.TAG_NAME }}
+        tags: ${{ env.REGISTRY_NAME }}/nginx_proj:${{ env.TAG_NAME }}
     - name: Login to ACR
       run: |
           echo "${{ secrets.GHCR_PASSWORD }}" | docker login --username "${{ secrets.ACR_USERNAME }}" --password-stdin "${{ secrets.ACR_LOGIN_SERVER }}"
