--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,9 +18,9 @@ jobs:
         tags: junnuvenu/nginx_proj:${{ env.TAG_NAME }}
     - name: Login to ACR
       run: |
-          echo "${{ secrets.GHCR_PASSWORD }}" | docker login --username "${{ secrets.ACR_USERNAME }}" --password-stdin "${{ secrets.ACR_LOGIN_SERVER }}"
+          echo "${{ secrets.ACR_PASSWORD }}" | docker login --username "${{ secrets.ACR_USERNAME }}" --password-stdin "${{ secrets.ACR_LOGIN_SERVER }}"
     - name: Deploy image to ACR
       run: |
         docker pull junnuvenu/nginx_proj:${{ env.TAG_NAME }}
-        docker tag junnuvenu/nginx_proj:${{ env.TAG_NAME }} ${{ env.ACR_LOGIN_SERVER }}/nginx_proj:${{ env.TAG_NAME }}
-        docker push ${{ env.ACR_LOGIN_SERVER }}/nginx_proj:${{ env.TAG_NAME }}
+        docker tag ghcr.io/junnuvenu/nginx_proj:${{ env.TAG_NAME }} ${{ env.ACR_LOGIN_SERVER }}/junnuvenu/nginx_proj:${{ env.TAG_NAME }}
+        docker push ${{ env.ACR_LOGIN_SERVER }}/junnuvenu/nginx_proj:${{ env.TAG_NAME }}
