--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,12 +15,12 @@ jobs:
       with:
         context: .
         push: true
-        tags: junnuvenu/nginx_proj:${{ env.TAG_NAME }}
+        tags: junnuvenu/nginx_proj:${{ env.env.GITHUB_SHA  }}
     - name: Login to ACR
       run: |
           echo "${{ secrets.ACR_PASSWORD }}" | docker login --username "${{ secrets.ACR_USERNAME }}" --password-stdin "${{ secrets.ACR_LOGIN_SERVER }}"
     - name: Deploy image to ACR
       run: |
-        docker pull ghcr.io/junnuvenu/nginx_proj:${{ env.TAG_NAME }}
-        docker tag ghcr.io/junnuvenu/nginx_proj:${{ env.TAG_NAME }} ${{ env.ACR_LOGIN_SERVER }}/junnuvenu/nginx_proj:${{ env.TAG_NAME }}
-        docker push ${{ env.ACR_LOGIN_SERVER }}/junnuvenu/nginx_proj:${{ env.TAG_NAME }}
+        docker pull ghcr.io/junnuvenu/nginx_proj:${{ env.env.GITHUB_SHA  }}
+        docker tag ghcr.io/junnuvenu/nginx_proj:${{ env.env.GITHUB_SHA  }} ${{ env.ACR_LOGIN_SERVER }}/junnuvenu/nginx_proj:${{ env.env.GITHUB_SHA  }}
+        docker push ${{ env.ACR_LOGIN_SERVER }}/junnuvenu/nginx_proj:${{ env.env.GITHUB_SHA  }}
