--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,3 @@
-name: Deploy
 on: [push]
 
 jobs:
@@ -12,11 +11,11 @@ jobs:
         echo "${{ secrets.GHCR_TOKEN }}" | docker login --username "${{ secrets.USERNAME }}" --password-stdin ghcr.io
     - name: Pull image from ghcr.io
       run: |
-        docker pull ghcr.io/junnuvenu/nginx_proj:2.0.185
+        docker pull ghcr.io/junnuvenu/nginx_proj:${{ github.ref }}
     - name: Login to ACR
       run: |
           echo "${{ secrets.ACR_PASSWORD }}" | docker login --username "${{ secrets.ACR_USERNAME }}" --password-stdin "${{ secrets.ACR_LOGIN_SERVER }}"
     - name: Deploy image to ACR
       run: |
-        docker tag ghcr.io/junnuvenu/nginx_proj:2.0.185 "${{ secrets.ACR_LOGIN_SERVER }}/nginx_proj:2.0.185"
-        docker push "${{ secrets.ACR_LOGIN_SERVER }}/nginx_proj:2.0.185"
+        docker tag ghcr.io/junnuvenu/nginx_proj:${{ github.ref }} "${{ secrets.ACR_LOGIN_SERVER }}/nginx_proj:${{ github.ref }}"
+        docker push "${{ secrets.ACR_LOGIN_SERVER }}/nginx_proj:${{ github.ref }}"
