--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,7 @@ jobs:
         echo "${{ secrets.GHCR_TOKEN }}" | docker login --username "${{ secrets.USERNAME }}" --password-stdin ghcr.io
     - name: Pull image from ghcr.io
       run: |
-        if [[ "${{ github.ref }}" =~ refs/tags/ ]]; then
+        if [[ "${{ github.ref }}" =~ refs/tags/ ]]; 
           TAG="${{ github.ref#refs/tags/ }}"
         else
           TAG="${{ github.sha }}"
