--- a/.github/workflows/AzureBuildDockerImagePushACR.yml
+++ b/.github/workflows/AzureBuildDockerImagePushACR.yml
@@ -1,7 +1,6 @@
 name: Build Linux Container Image and Push to ACR
 
-on:
-  workflow_dispatch:
+on: [push]
 
 jobs:
   build:
@@ -9,7 +8,7 @@ jobs:
     defaults:
       run:
         shell: bash
-        working-directory: .
+       
     steps:
     - uses: actions/checkout@v2
     - uses: azure/docker-login@v1
