--- a/.github/workflows/AzureBuildDockerImagePushACR.yml
+++ b/.github/workflows/AzureBuildDockerImagePushACR.yml
@@ -18,10 +18,5 @@ jobs:
         username: ${{ secrets.ACR_USERNAME }}
         password: ${{ secrets.ACR_PASSWORD }}
     - run: |
-        if [[ "${{ github.ref }}" =~ refs/tags/ ]]; then
-          TAG="${github.ref#refs/tags/}"
-        else
-          TAG="${{ github.sha }}"
-        fi
-        docker build . -t multitdockeracr.azurecr.io/nginx_proj:$TAG
-        docker push multitdockeracr.azurecr.io/nginx_proj:$TAG
+        docker build . -t multitdockeracr.azurecr.io/nginx_proj:${{ github.sha }}
+        docker push multitdockeracr.azurecr.io/nginx_proj:${{ github.sha }}
