--- a/.github/workflows/AzureBuildDockerImagePushACR.yml
+++ b/.github/workflows/AzureBuildDockerImagePushACR.yml
@@ -19,13 +19,10 @@ jobs:
     - name: Login to ghcr.io
       run: |
         echo "${{ secrets.GHCR_TOKEN }}" | docker login --username "${{ secrets.USERNAME }}" --password-stdin ghcr.io
-    - name: Get latest tag
+    - name: Pull image from ghcr.io
       run: |
-        latest_tag=$(curl -s https://api.github.com/repos/junnuvenu/nginx_proj/releases/latest | jq -r '.tag_name')
-    - name: tag to ACR
-      run: |
-        docker tag $(docker images --format "{{.Repository}}:{{.Tag}}" | head -n 1) "multitdockeracr.azurecr.io/nginx_proj:${{ latest_tag }}}"
+        docker pull ghcr.io/junnuvenu/nginx:1.0.220
     - name: push to ACR
       run: |
-        SHA=$(git rev-parse HEAD)
-        docker push multitdockeracr.azurecr.io/nginx_proj:${{ latest_tag }}
+        docker tag ghcr.io/junnuvenu/nginx_proj:1.0.220 multitdockeracr.azurecr.io/nginx_proj:1.0.220"
+        docker push multitdockeracr.azurecr.io/nginx_proj:1.0.220"
