--- a/.github/workflows/AzureBuildDockerImagePushACR.yml
+++ b/.github/workflows/AzureBuildDockerImagePushACR.yml
@@ -25,4 +25,4 @@ jobs:
     - name: push to ACR
       run: |
         docker tag ghcr.io/junnuvenu/nginx_proj:1.0.220 "multitdockeracr.azurecr.io/nginx_proj:1.0.220"
-        docker push multitdockeracr.azurecr.io/nginx_proj:1.0.220"
+        docker push multitdockeracr.azurecr.io/nginx_proj:1.0.220
