--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,6 +2,8 @@ name: Deploy
 on: [push]
 
 env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: junnuvenu/nginx_proj
   IMAGE_TAG : 1.0.${{github.run_number}}
 
 jobs:
@@ -16,10 +18,11 @@ jobs:
     - name: Pull image from ghcr.io
       run: |
         docker pull ghcr.io/junnuvenu/nginx_proj:${{env.IMAGE_TAG}}
-    - name: Login to ACR
-      run: |
-          echo "${{ secrets.ACR_PASSWORD }}" | docker login --username "${{ secrets.ACR_USERNAME }}" --password-stdin "${{ secrets.ACR_LOGIN_SERVER }}"
-    - name: Deploy image to ACR
-      run: |
-        docker tag ghcr.io/junnuvenu/nginx_proj:${{env.IMAGE_TAG}} "${{ secrets.ACR_LOGIN_SERVER }}/nginx_proj:${{env.IMAGE_TAG}}t"
-        docker push "${{ secrets.ACR_LOGIN_SERVER }}/nginx_proj:${{env.IMAGE_TAG}}"
+        echo ${{env.IMAGE_TAG}}
+    # - name: Login to ACR
+    #  run: |
+    #      echo "${{ secrets.ACR_PASSWORD }}" | docker login --username "${{ secrets.ACR_USERNAME }}" --password-stdin "${{ secrets.ACR_LOGIN_SERVER }}"
+    # - name: Deploy image to ACR
+    #  run: |
+    #    docker tag ghcr.io/junnuvenu/nginx_proj:${{env.IMAGE_TAG}} "${{ secrets.ACR_LOGIN_SERVER }}/nginx_proj:${{env.IMAGE_TAG}}"
+    #    docker push "${{ secrets.ACR_LOGIN_SERVER }}/nginx_proj:${{env.IMAGE_TAG}}"
