--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -50,6 +50,12 @@ jobs:
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+       
+      - name: Tag the image with commit sha
+        run: |
+         IMAGE_TAG=${{github.sha}}
+         docker tag ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }} ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{IMAGE_TAG}}
+         echo Tagged Docker Image with commit sha: ${{IMAGE_TAG}}
 
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
@@ -57,10 +63,10 @@ jobs:
         id: build-and-push
         uses: docker/build-push-action@ac9327eae2b366085ac7f6a2d02df8aa8ead720a
         with:
-          context: .
-          push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{env.REGISTRY}}/${{env.IMAGE_NAME}}:${{env.IMAGE_TAG}}
-          #$ tags: ${{ steps.meta.outputs.tags }}{{}}
-          labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+         context: .
+         push: ${{ github.event_name != 'pull_request' }}
+         tags: ${{env.REGISTRY}}/${{env.IMAGE_NAME}}:${{IMAGE_TAG}}
+         labels: ${{ steps.meta.outputs.labels }}
+         cache-from: type=gha
+         cache-to: type=gha,mode=max
+
