--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -13,7 +13,7 @@ env:
   # Use docker.io for Docker Hub if empty
   REGISTRY: ghcr.io
   IMAGE_NAME: junnuvenu/nginx_proj
-  IMAGE_TAG : 2.0.${{github.run_number}}
+  # IMAGE_TAG : 2.0.${{github.run_number}}
 
 
 jobs:
