--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -13,8 +13,8 @@ env:
   # Use docker.io for Docker Hub if empty
   REGISTRY: ghcr.io
   IMAGE_NAME: junnuvenu/nginx_proj
-  # IMAGE_TAG : 2.0.${{github.run_number}}
-  IMAGE_TAG : ${{github.sha}}
+  IMAGE_TAG : 2.0.${{github.run_number}}
+ 
 
 
 jobs:
@@ -51,12 +51,7 @@ jobs:
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-       
-      - name: Tag the image with commit sha
-        run: |
-         docker tag ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }} ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{IMAGE_TAG}}
-         echo Tagged Docker Image with commit sha: ${{IMAGE_TAG}}
-
+      
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
       - name: Build and push Docker image
