--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -65,4 +65,24 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+          
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout the code
+      uses: actions/checkout@v2
+    - name: Login to ghcr.io
+      run: |
+        echo "${{ secrets.GHCR_TOKEN }}" | docker login --username "${{ secrets.USERNAME }}" --password-stdin ghcr.io
+    - name: Pull image from ghcr.io
+      run: |
+        docker pull ghcr.io/junnuvenu/nginx_proj:${{env.IMAGE_TAG}}
+        echo ${{env.IMAGE_TAG}}
+    - name: Login to ACR
+      run: |
+        echo "${{ secrets.ACR_PASSWORD }}" | docker login --username "${{ secrets.ACR_USERNAME }}" --password-stdin "${{ secrets.ACR_LOGIN_SERVER }}"
+    - name: Deploy image to ACR
+      run: |
+        docker tag ghcr.io/junnuvenu/nginx_proj:${{env.IMAGE_TAG}} "${{ secrets.ACR_LOGIN_SERVER }}/nginx_proj:${{env.IMAGE_TAG}}"
+        docker push "${{ secrets.ACR_LOGIN_SERVER }}/nginx_proj:${{env.IMAGE_TAG}}"
 
