--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -51,6 +51,11 @@ jobs:
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          
+      - name: Semantic Release
+        uses: semantic-release/github-action@v4.4.4
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
@@ -66,18 +71,18 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
           
-      - name: Login to ghcr.io
-        run: |
-         echo "${{ secrets.GHCR_TOKEN }}" | docker login --username "${{ secrets.USERNAME }}" --password-stdin ghcr.io
-      - name: Pull image from ghcr.io
-        run: |
-         docker pull ghcr.io/junnuvenu/nginx_proj:${{env.IMAGE_TAG}}
-         echo ${{env.IMAGE_TAG}}
-      - name: Login to ACR
-        run: |
-         echo "${{ secrets.ACR_PASSWORD }}" | docker login --username "${{ secrets.ACR_USERNAME }}" --password-stdin "${{ secrets.ACR_LOGIN_SERVER }}"
-      - name: Deploy image to ACR
-        run: |
-         docker tag ghcr.io/junnuvenu/nginx_proj:${{env.IMAGE_TAG}} "${{ secrets.ACR_LOGIN_SERVER }}/nginx_proj:${{env.IMAGE_TAG}}"
-         docker push "${{ secrets.ACR_LOGIN_SERVER }}/nginx_proj:${{env.IMAGE_TAG}}"
+      #- name: Login to ghcr.io
+  #      run: |
+    #      echo "${{ secrets.GHCR_TOKEN }}" | docker login --username "${{ secrets.USERNAME }}" --password-stdin ghcr.io
+      # - name: Pull image from ghcr.io
+        # run: |
+        #  docker pull ghcr.io/junnuvenu/nginx_proj:${{env.IMAGE_TAG}}
+        #  echo ${{env.IMAGE_TAG}}
+      # - name: Login to ACR
+      #   run: |
+       #   echo "${{ secrets.ACR_PASSWORD }}" | docker login --username "${{ secrets.ACR_USERNAME }}" --password-stdin "${{ secrets.ACR_LOGIN_SERVER }}"
+       #- name: Deploy image to ACR
+       #  run: |
+        #  docker tag ghcr.io/junnuvenu/nginx_proj:${{env.IMAGE_TAG}} "${{ secrets.ACR_LOGIN_SERVER }}/nginx_proj:${{env.IMAGE_TAG}}"
+        #  docker push "${{ secrets.ACR_LOGIN_SERVER }}/nginx_proj:${{env.IMAGE_TAG}}"
 
